220927_week8/pokedex2/style.css
:root {
  --dark-color: rgb(91, 91, 91);
  --dark-color-alpha: rgba(0, 0, 0, 0.3);
  --dark-color-alpha-2: rgba(0, 0, 0, 0.6);
  --light-color-alpha: rgba(255, 255, 255, 0.2);
  --border-rad: 0.5rem;
  --card-height: 250px;
  --card-width: 190px;
}

@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");

*,
*:after,
*:before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Raleway", sans-serif;
  font-weight: 300;
  background: linear-gradient(to bottom, #f3bfa9, #9f6ec0, #414485) no-repeat
    fixed;
  color: white;
}

header {
  padding: 1rem;
  text-align: center;
}

h1 {
  margin: 3rem 0;
  font-size: 3.5rem;
  font-weight: inherit;
  text-shadow: 1px 1px 1px var(--dark-color-alpha);
}

.bar {
  margin: 1rem 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

#search {
  min-width: 300px;
  font-family: inherit;
  font-size: inherit;
  padding: 0.5rem 1rem;
  border: none;
  border-radius: 5px;
  box-shadow: 1px 1px 1px var(--dark-color-alpha);
}

#gens ul {
  margin: 1rem 0;
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  justify-content: center;
  gap: 0.5rem;
}

#gens ul li button {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  cursor: pointer;
  padding: 0.5rem 0.7rem;
  border: none;
  border-radius: 5px;
  background: var(--dark-color-alpha);
  color: white;
  border: 1px solid white;
  box-shadow: 1px 1px 1px var(--dark-color-alpha);
  transition: 0.1s;
}

#gens ul li button:hover {
  box-shadow: 0 0 5px white;
  cursor: pointer;
}

#gens ul li button.picked {
  background: var(--dark-color-alpha-2);
}

main {
  display: flex;
  justify-content: center;
}

.card-container {
  width: 100%;
  gap: 1.5rem;
  display: grid;
  grid-template-columns: repeat(auto-fill, var(--card-width));
  justify-content: center;
  margin: 0 0 3rem 0;
}

.card {
  position: relative;
  color: white;
  height: var(--card-height);
  width: var(--card-width);
  border-radius: var(--border-rad);
  box-shadow: 2px 1px 2px var(--dark-color-alpha);
  transition: 0.25s;
}
.card .image {
  background: var(--light-color-alpha);
  height: var(--card-width);
  border-radius: var(--border-rad) var(--border-rad) 0 0;
  border-top: 1px solid white;
  border-left: 1px solid white;
  border-right: 1px solid white;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.5s;
}
.card:hover {
  box-shadow: 0 0 5px white;
  filter: drop-shadow(0 0 0.3rem #ff4d0079);
}

.card:hover .image {
  filter: drop-shadow(0 0 0.65rem #ffffff);
}

.card .image img {
  max-height: calc(var(--card-width) * 0.77);
  max-width: calc(var(--card-width) * 0.77);
  margin-top: 0.5rem;
}

.card .info {
  background: var(--dark-color-alpha);
  padding: 0.5rem;
  height: calc(var(--card-height) - var(--card-width));
  border-radius: 0 0 var(--border-rad) var(--border-rad);
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: 1px solid white;
  border-left: 1px solid white;
  border-right: 1px solid white;
}

.card .info h2 {
  font-weight: inherit;
  font-size: 1rem;
  padding: 0 0 3%;
}

.types img {
  height: 1.2rem;
  width: 1.2rem;
  -webkit-filter: drop-shadow(0 0 1px var(--dark-color-alpha));
  filter: drop-shadow(0 0 1px var(--dark-color-alpha));
  margin-right: 0.2rem;
}

.types {
  position: absolute;
  top: 0.4rem;
  left: 0.4rem;
}

.gen {
  position: absolute;
  top: 0.4rem;
  right: 0.4rem;
  width: 1.2rem;
  height: 1.2rem;

  border: 1px solid white;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 0.8rem;
}

#types {
  margin: 0 0 1rem 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 0.3rem;
}

#types div {
  position: relative;
}
#types label img {
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

#types div input {
  opacity: 0;
  position: absolute;
  top: 0.5rem;
  left: 0.5rem;
}

#types input:checked + label img {
  -webkit-filter: drop-shadow(0 0 10px white);
  filter: drop-shadow(0 0 10px white);
}

@media screen {
}

footer {
  display: block;
  background-color: var(--dark-color-alpha);
  text-align: center;
  font-size: 0.8rem;
  padding: 0.5rem;
}

#loader {
  font-size: 1rem;
  margin: 1rem;
  background-color: #f3bfa9;
}

#loader div {
  margin: auto;
}

.hidden {
  display: none;
}

@media (max-width: 800px) {
}

